# cpp-template

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.org
cpp-template/: CMakeLists.txt
scripts/: build.sh
